--- a/app/src/main/resources/static/assets/css/index.css
+++ b/app/src/main/resources/static/assets/css/index.css
@@ -38,7 +38,8 @@ h2 {
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-image: url('YOUR_BACKGROUND_IMAGE_PATH_HERE'); /* Placeholder for background image */
+    /* Placeholder for background image */
+    /* background-image: url('YOUR_BACKGROUND_IMAGE_PATH_HERE');  */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
