--- a/app/src/main/resources/templates/admin/adminDashboard.html
+++ b/app/src/main/resources/templates/admin/adminDashboard.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin Dashboard</title>
-    <link rel="icon" type="image/png" th:href="@{/assets/images/logo/logo.png}" />
-    <link rel="stylesheet" th:href="@{/assets/css/adminDashboard.css}">
-    <link rel="stylesheet" th:href="@{/assets/css/style.css}">
-    <script th:src="@{/js/render.js}" defer></script>
-    <script th:src="@{/js/util.js}" defer></script>
-    <script th:src="@{/js/components/header.js}" defer></script>
-    <script th:src="@{/js/components/footer.js}" defer></script>
+    <link rel="icon" type="image/png" th:href="@{../../assets/images/logo/logo.png}" />
+    <link rel="stylesheet" th:href="@{../assets/css/adminDashboard.css}">
+    <link rel="stylesheet" th:href="@{../assets/css/style.css}">
+    <script th:src="@{../js/render.js}" defer></script>
+    <script th:src="@{../js/util.js}" defer></script>
+    <script th:src="@{../js/components/header.js}" defer></script>
+    <script th:src="@{../js/components/footer.js}" defer></script>  
+    <script>
+        // Immediately clear from URL after loading
+        window.history.replaceState({}, document.title, window.location.pathname);
+    </script>
 </head>
 <body>
     <div class="container">
@@ -46,7 +50,7 @@
         </div>
     </div>
 
-    <script type="module" src="../js/services/adminDashboard.js" defer></script>
+    <script type="module" src="../js/adminDashboard.js" defer></script>
     <script type="module" src="../js/components/doctorCard.js" defer></script>
 </body>
 </html>
