--- a/app/src/main/resources/templates/doctor/doctorDashboard.html
+++ b/app/src/main/resources/templates/doctor/doctorDashboard.html
@@ -12,6 +12,10 @@
     <script src="../js/components/header.js" defer></script>
     <script src="../js/components/footer.js" defer></script>
     <script src="../js/components/patientRows.js" defer></script>
+    <script>
+        // Immediately clear from URL after loading
+        window.history.replaceState({}, document.title, window.location.pathname);
+    </script>
 </head>
 <body>
     <div class="container">
