Fix Dashboards frontend

--- a/app/src/main/resources/templates/admin/adminDashboard.html
+++ b/app/src/main/resources/templates/admin/adminDashboard.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" th:href="@{../assets/css/style.css}">
     <script th:src="@{../js/render.js}" defer></script>
     <script th:src="@{../js/util.js}" defer></script>
-    <script th:src="@{../js/components/header.js}" defer></script>
-    <script th:src="@{../js/components/footer.js}" defer></script>  
+    <script type="module" th:src="@{../js/components/header.js}" defer></script>
+    <script type="module" th:src="@{../js/components/footer.js}" defer></script>  
     <script>
         // Immediately clear from URL after loading
         window.history.replaceState({}, document.title, window.location.pathname);
