--- a/app/src/main/resources/templates/doctor/doctorDashboard.html
+++ b/app/src/main/resources/templates/doctor/doctorDashboard.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>DoctorDashboard</title>
-    <link rel="icon" type="image/png" href="../assets/images/logo/logo.png" />
+    <link rel="icon" type="image/png" href="../../assets/images/logo/logo.png" />
     <link rel="stylesheet" href="../assets/css/adminDashboard.css">
     <link rel="stylesheet" href="../assets/css/doctorDashboard.css">
     <link rel="stylesheet" href="../assets/css/style.css">
     <script src="../js/render.js" defer></script>
     <script src="../js/util.js" defer></script>
-    <script src="../js/components/header.js" defer></script>
-    <script src="../js/components/footer.js" defer></script>
+    <script type="module" src="../js/components/header.js" defer></script>
+    <script type="module" src="../js/components/footer.js" defer></script>
     <script src="../js/components/patientRows.js" defer></script>
     <script>
         // Immediately clear from URL after loading
