Fixed add, delete doctor behaviour

--- a/app/src/main/resources/templates/admin/adminDashboard.html
+++ b/app/src/main/resources/templates/admin/adminDashboard.html
@@ -29,10 +29,20 @@
                     </select>
                     <select id="specialtyFilter">
                         <option value="">Filter by Specialty</option>
-                        <option value="Cardiologist">Cardiologist</option>
-                        <option value="Dentist">Dentist</option>
-                        <option value="Pediatrician">Pediatrician</option>
-                        <option value="Dermatologist">Dermatologist</option>
+                        <option value="cardiologist">Cardiologist</option>
+                        <option value="dermatologist">Dermatologist</option>
+                        <option value="neurologist">Neurologist</option>
+                        <option value="pediatrician">Pediatrician</option>
+                        <option value="orthopedic">Orthopedic</option>
+                        <option value="gynecologist">Gynecologist</option>
+                        <option value="psychiatrist">Psychiatrist</option>
+                        <option value="dentist">Dentist</option>
+                        <option value="ophthalmologist">Ophthalmologist</option>
+                        <option value="ent">ENT Specialist</option>
+                        <option value="urologist">Urologist</option>
+                        <option value="oncologist">Oncologist</option>
+                        <option value="gastroenterologist">Gastroenterologist</option>
+                        <option value="general">General Physician</option>
                         </select>
                 </div>
                 <div id="content">
