Filter of Doctors in the Admin Dashboard

--- a/app/src/main/resources/templates/admin/adminDashboard.html
+++ b/app/src/main/resources/templates/admin/adminDashboard.html
@@ -22,12 +22,12 @@
             <main class="main-content">
                 <input type="text" id="searchBar" placeholder="search by doctor name" />
                 <div class="filter-section">
-                    <select id="timeFilter">
+                    <select id="filterTime">
                         <option value="">Filter by Time</option>
                         <option value="AM">AM</option>
                         <option value="PM">PM</option>
                     </select>
-                    <select id="specialtyFilter">
+                    <select id="filterSpecialty">
                         <option value="">Filter by Specialty</option>
                         <option value="cardiologist">Cardiologist</option>
                         <option value="dermatologist">Dermatologist</option>
