Fixed the appointment update

--- a/app/src/main/resources/static/assets/css/updateAppointment.css
+++ b/app/src/main/resources/static/assets/css/updateAppointment.css
@@ -69,7 +69,7 @@
 
   .btn-secondary {
     background-color: transparent;
-    color: #333;
+    color: #ac1111;
     border: 1px solid #ccc;
     padding: 12px;
     width: 100%;
